force-app/main/default/objects/Invoice__c/fields/QuickBooks_Status__c.field-meta.xml
<CustomField>
    <fullName>QuickBooks_Status__c</fullName>
    <label>Quickbooks Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Send to QB SV</fullName>
            </value>
            <value>
                <fullName>Send to QB INow</fullName>
            </value>
            <value>
                <fullName>Send to QB SLi</fullName>
            </value>
            <value>
                <fullName>Added to QB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>