force-app/main/default/objects/Invoice__c/fields/Sales_Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>Sales_Approval_Required__c</fullName>
    <formula>IF(ISPICKVAL(Opportunity__r.Sales_Approval_of_Invoices__c,&quot;All Invoices&quot;),true,
IF(ISPICKVAL(Opportunity__r.Sales_Approval_of_Invoices__c,&quot;First Invoice Only&quot;)&amp;&amp; Invoicing_Status_from_Opp__c =&quot;First&quot;,true,
IF(Invoicing_Status_from_Opp__c =&quot;One-Off&quot;,true,false)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Approval Required</label>
    <type>Checkbox</type>
</CustomField>