force-app/main/default/objects/Invoice__c/fields/Service_or_Licence_Fee__c.field-meta.xml
<CustomField>
    <fullName>Service_or_Licence_Fee__c</fullName>
    <label>Service or Licence Fee</label>
    <summarizedField>Invoice_Line_Item__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice_Line_Item__c.Name</field>
        <operation>contains</operation>
        <value>Licence, Service</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>