force-app/main/default/objects/Invoice__c/fields/Sign_Video_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Sign_Video_Invoice_Number__c</fullName>
    <displayFormat>SV-{0000000}</displayFormat>
    <label>Sign Video Invoice Number</label>
    <type>AutoNumber</type>
</CustomField>