force-app/main/default/objects/Invoice__c/fields/SignVideoAtWInvoice__c.field-meta.xml
<CustomField>
    <fullName>SignVideoAtWInvoice__c</fullName>
    <description>##Conga created button:00b63000001TeAX</description>
    <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +
&quot;&amp;queryid=[ILICallPlan]0Q_003EAS498801,[ILI]0Q_000EAS612969,[ILIExcess]0Q_004EAS028555&quot; + 
&quot;&amp;templateid=0T_001EAS753896&quot; + 
&quot;&amp;defaultpdf=1&quot; + 
&quot;&amp;sc1=1&quot; + 
&quot;&amp;sc0=1&quot; + 
&quot;&amp;ofn=Invoice &quot; + Name + TEXT(Invoice_Version__c) +
&quot;&amp;liveeditvisible=1&quot; + 
&quot;&amp;uf0=1&quot; + 
&quot;&amp;mfts0=Create_Conga_Invoice_PDF__c&quot; + 
&quot;&amp;mftsvalue0=False&quot; + 
&quot;&amp;qmode=SalesforceFile&quot;</formula>
    <label>SignVideoAtWInvoice</label>
    <type>Text</type>
</CustomField>