force-app/main/default/objects/Invoice__c/fields/SLI_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>SLI_Invoice_Number__c</fullName>
    <displayFormat>SLI-{0000000}</displayFormat>
    <label>SLI Invoice Number</label>
    <type>AutoNumber</type>
</CustomField>