force-app/main/default/objects/Invoice__c/fields/VAT_Rate__c.field-meta.xml
<CustomField>
    <fullName>VAT_Rate__c</fullName>
    <formula>IF( ISPICKVAL(Account__r.VAT_Applicable__c, &quot;Yes&quot;) , 0.20, 0)</formula>
    <label>VAT Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>