force-app/main/default/objects/Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Invoice_Date__c</columns>
    <columns>Invoice_Status__c</columns>
    <columns>Payment_Due_Date__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>No_Line_Items__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>