force-app/main/default/objects/Invoice__c/listViews/Created_Today_new.listView-meta.xml
<ListView>
    <fullName>Created_Today_new</fullName>
    <columns>Invoice_Date__c</columns>
    <columns>NAME</columns>
    <columns>Invoice_Status__c</columns>
    <columns>Account__c</columns>
    <columns>No_of_Accounts__c</columns>
    <columns>Invoice_From__c</columns>
    <columns>Invoice_To__c</columns>
    <columns>Minutes_Allowed__c</columns>
    <columns>Minutes_Used__c</columns>
    <columns>Excess_Minutes__c</columns>
    <columns>Total__c</columns>
    <columns>PO_Required__c</columns>
    <columns>Purchase_Order_Number__c</columns>
    <columns>Itemised_Invoice_Required__c</columns>
    <columns>Invoice_Method__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Created Today (new)</label>
</ListView>