force-app/main/default/objects/Invoice__c/listViews/Created_Yesterday.listView-meta.xml
<ListView>
    <fullName>Created_Yesterday</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Invoice_Template__c</columns>
    <columns>Customer_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>Created Yesterday</label>
</ListView>