force-app/main/default/objects/Invoice__c/listViews/Invoices_Sent.listView-meta.xml
<ListView>
    <fullName>Invoices_Sent</fullName>
    <columns>Invoice_Actual_Sent_Date__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Invoice_Status__c</columns>
    <columns>QuickBooks_Status__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>Invoice_From__c</columns>
    <columns>Invoice_To__c</columns>
    <columns>Minutes_Allowed__c</columns>
    <columns>Minutes_Used__c</columns>
    <columns>Excess_Minutes__c</columns>
    <columns>Total__c</columns>
    <columns>PO_Required__c</columns>
    <columns>Purchase_Order_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Invoice_Status__c</field>
        <operation>equals</operation>
        <value>Sent via Email,Sent via Post,Sent via Portal</value>
    </filters>
    <label>2. Invoices Sent</label>
</ListView>