force-app/main/default/objects/Invoice__c/listViews/Invoices_To_be_Sent_This_Month.listView-meta.xml
<ListView>
    <fullName>Invoices_To_be_Sent_This_Month</fullName>
    <columns>Invoice_Date__c</columns>
    <columns>NAME</columns>
    <columns>Invoice_Status__c</columns>
    <columns>Account__c</columns>
    <columns>No_of_Accounts__c</columns>
    <columns>Invoice_From__c</columns>
    <columns>Invoice_To__c</columns>
    <columns>Minutes_Allowed__c</columns>
    <columns>Minutes_Used__c</columns>
    <columns>Excess_Minutes__c</columns>
    <columns>Total__c</columns>
    <columns>PO_Required__c</columns>
    <columns>Purchase_Order_Number__c</columns>
    <columns>Itemised_Invoice_Required__c</columns>
    <columns>Invoice_Method__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Invoice_Status__c</field>
        <operation>equals</operation>
        <value>New,Submitted for Approval,Approved,Rejected</value>
    </filters>
    <filters>
        <field>Account__c</field>
        <operation>notContain</operation>
        <value>TEST</value>
    </filters>
    <label>1. Invoices To Be Sent</label>
</ListView>